Shit tonne of stuff. TLDR: Integrating bullet physics, required multiple things to fix Seems that rotation is wrong from bullet since it returns euler angles being transformed in the wrong order compared to directx

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -115,8 +115,9 @@
     <ClInclude Include="Source\Flow\Assets\Materials\MaterialAsset.h" />
     <ClInclude Include="Source\Flow\Assets\Materials\Mat_FlatColour.h" />
     <ClInclude Include="Source\Flow\Assets\Materials\Temporary\Mat_Hat_FancyMan.h" />
+    <ClInclude Include="Source\Flow\Assets\Materials\Temporary\Mat_TexturedPhong.h" />
+    <ClInclude Include="Source\Flow\Assets\Materials\Temporary\Mat_WabbleProps.h" />
     <ClInclude Include="Source\Flow\Assets\Meshes\MeshAsset.h" />
-    <ClInclude Include="Source\Flow\Assets\Meshes\MultiMeshAsset.h" />
     <ClInclude Include="Source\Flow\Assets\Shaders\ShaderAsset.h" />
     <ClInclude Include="Source\Flow\Assets\Textures\GDIPlusManager.h" />
     <ClInclude Include="Source\Flow\Assets\Textures\TextureAsset.h" />
@@ -139,6 +140,7 @@
     <ClInclude Include="Source\Flow\GameFramework\Gameobject.h" />
     <ClInclude Include="Source\Flow\GameFramework\World.h" />
     <ClInclude Include="Source\Flow\GameFramework\WorldObject.h" />
+    <ClInclude Include="Source\Flow\Helper\BulletDebugDrawing.h" />
     <ClInclude Include="Source\Flow\Helper\HelperMacros.h" />
     <ClInclude Include="Source\Flow\Helper\Maths.h" />
     <ClInclude Include="Source\Flow\Helper\Maths\Transformations\Rotator.h" />
@@ -172,6 +174,7 @@
     <ClInclude Include="Source\Flow\Rendering\Core\Camera\Camera.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Camera\CameraLayer.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Lights\PointLight.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\Line.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Materials\Material.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Materials\MaterialVertexFormatter.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Mesh\StaticMesh.h" />
@@ -280,8 +283,9 @@
     <ClCompile Include="Source\Flow\Assets\Materials\MaterialAsset.cpp" />
     <ClCompile Include="Source\Flow\Assets\Materials\Mat_FlatColour.cpp" />
     <ClCompile Include="Source\Flow\Assets\Materials\Temporary\Mat_Hat_FancyMan.cpp" />
+    <ClCompile Include="Source\Flow\Assets\Materials\Temporary\Mat_TexturedPhong.cpp" />
+    <ClCompile Include="Source\Flow\Assets\Materials\Temporary\Mat_WabbleProps.cpp" />
     <ClCompile Include="Source\Flow\Assets\Meshes\MeshAsset.cpp" />
-    <ClCompile Include="Source\Flow\Assets\Meshes\MultiMeshAsset.cpp" />
     <ClCompile Include="Source\Flow\Assets\Shaders\ShaderAsset.cpp" />
     <ClCompile Include="Source\Flow\Assets\Textures\GDIPlusManager.cpp" />
     <ClCompile Include="Source\Flow\Assets\Textures\TextureAsset.cpp" />
@@ -303,6 +307,7 @@
     <ClCompile Include="Source\Flow\GameFramework\Gameobject.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\World.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\WorldObject.cpp" />
+    <ClCompile Include="Source\Flow\Helper\BulletDebugDrawing.cpp" />
     <ClCompile Include="Source\Flow\Helper\Timer.cpp" />
     <ClCompile Include="Source\Flow\Input\WindowsInput.cpp" />
     <ClCompile Include="Source\Flow\Layers\EditorLayer.cpp" />
@@ -322,6 +327,7 @@
     <ClCompile Include="Source\Flow\Rendering\Core\Camera\Camera.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Camera\CameraLayer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Lights\PointLight.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\Line.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Materials\Material.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Materials\MaterialVertexFormatter.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Mesh\StaticMesh.cpp" />
@@ -353,6 +359,16 @@
     <Library Include="ThirdParty\Assimp\assimp-vc140-mt.lib" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="Source\Flow\Rendering\Core\Shaders\LineShaderP.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(SolutionDir)Flow\Source\Flow\Rendering\Core\Shaders\%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
+    <FxCompile Include="Source\Flow\Rendering\Core\Shaders\LineShaderV.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(SolutionDir)Flow\Source\Flow\Rendering\Core\Shaders\%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
     <FxCompile Include="Source\Flow\Rendering\Core\Shaders\SolidColorVS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
