--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -92,13 +92,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Content\Crate.cpp" />
     <ClCompile Include="Source\Content\Wall.cpp" />
+    <ClCompile Include="Source\Content\WorldObjects\MeshWorldObject.cpp" />
     <ClCompile Include="Source\Example Layer.cpp" />
     <ClCompile Include="Source\Content\ExampleWorldObject.cpp" />
     <ClCompile Include="Source\SandboxApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Content\Crate.h" />
     <ClInclude Include="Source\Content\Wall.h" />
+    <ClInclude Include="Source\Content\WorldObjects\MeshWorldObject.h" />
     <ClInclude Include="Source\Example Layer.h" />
     <ClInclude Include="Source\Content\ExampleWorldObject.h" />
   </ItemGroup>
