Figured out the normals issues I had were from the model being exported from UE4, not my shading

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=259,116
-Size=738,560
-Collapsed=0
+Pos=298,31
+Size=1075,1048
+Collapsed=1
 
 [Window][Example: Console]
 Pos=1151,333
@@ -70,10 +70,10 @@ Size=262,310
 Collapsed=0
 
 [Window][Camera]
-Pos=0,430
-Size=280,310
+Pos=1070,372
+Size=210,368
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000D,1
 
 [Window][Meshes]
 Pos=1021,66
@@ -81,52 +81,48 @@ Size=310,714
 Collapsed=0
 
 [Window][Application Statistics]
-Pos=0,0
-Size=280,185
+Pos=0,616
+Size=1068,124
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000002,0
 
 [Window][Asset System]
-Pos=0,0
-Size=280,185
+Pos=0,616
+Size=1068,124
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000002,1
 
 [Window][Light]
-Pos=0,187
-Size=280,241
+Pos=1070,372
+Size=210,368
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000D,0
 
 [Window][Inspector]
-Pos=1027,284
-Size=253,456
+Pos=1070,372
+Size=210,368
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000D,2
 
 [Window][Heirarchy]
-Pos=1027,0
-Size=253,282
+Pos=1070,0
+Size=210,370
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x0000000C,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
-  DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
-  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
-    DockNode      ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
-    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=539,701
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,740 Split=X
-  DockNode        ID=0x0000000B Parent=0x8B93E3BD SizeRef=1025,720 Split=X
-    DockNode      ID=0x0000000C Parent=0x0000000B SizeRef=280,720 Split=Y Selected=0x3F488DE8
-      DockNode    ID=0x00000002 Parent=0x0000000C SizeRef=637,428 Split=Y Selected=0x3F488DE8
-        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=291,185 Selected=0x3F488DE8
-        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=291,241 Selected=0xAADB73F3
-      DockNode    ID=0x00000005 Parent=0x0000000C SizeRef=637,310 Selected=0x3CB0EB33
-    DockNode      ID=0x0000000D Parent=0x0000000B SizeRef=743,720 Split=Y
-      DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=1280,326 Selected=0x0B5ED8BF
-      DockNode    ID=0x00000004 Parent=0x0000000D SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
-  DockNode        ID=0x0000000E Parent=0x8B93E3BD SizeRef=253,720 Split=Y Selected=0xE884D536
-    DockNode      ID=0x0000000F Parent=0x0000000E SizeRef=237,282 Selected=0xE884D536
-    DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=237,456 Selected=0xF02CD328
+DockSpace       ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
+  DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
+  DockNode      ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
+    DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
+    DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=539,701
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,740 Split=X
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1068,740 Split=Y
+    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1280,614 Split=Y
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,326 Selected=0x0B5ED8BF
+      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1280,124 Selected=0x24DDE09A
+  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=210,740 Split=Y Selected=0xE884D536
+    DockNode    ID=0x0000000C Parent=0x00000008 SizeRef=210,370 Selected=0xE884D536
+    DockNode    ID=0x0000000D Parent=0x00000008 SizeRef=210,368 Selected=0xF02CD328
 
