--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=298,31
+Pos=28,26
 Size=1075,1048
 Collapsed=1
 
@@ -121,7 +121,7 @@ DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,740 Split=X
     DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1280,614 Split=Y
       DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,326 Selected=0x0B5ED8BF
       DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
-    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1280,124 Selected=0x24DDE09A
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1280,124 Selected=0x3F488DE8
   DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=210,740 Split=Y Selected=0xE884D536
     DockNode    ID=0x0000000C Parent=0x00000008 SizeRef=210,370 Selected=0xE884D536
     DockNode    ID=0x0000000D Parent=0x00000008 SizeRef=210,368 Selected=0xF02CD328
