Thought I had pushed some of this stuff already >Reworked scene, properly scaled everything for 1unit  = 1m >Added camera speed control >Fixed Rotation updating when moving object using UI >Fixed properties being updated from imgui on every character change instead of enter/loss of focus
>Header implementation of Chili's dynamic constant buffer example

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\BindableCodex.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\BindableVertexBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\ConstantBuffer.h" />
+    <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\DynamicConstantBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\ShaderConstantBuffers.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\TransformConstantBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\IndexBuffer.h" />
@@ -309,6 +310,7 @@
     <ClCompile Include="Source\Flow\Layers\Layer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\BindableCodex.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\BindableVertexBuffer.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\DynamicConstantBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\ConstantBuffers\TransformConstantBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\IndexBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\InputLayout.cpp" />
