--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -130,10 +130,14 @@
     <ClInclude Include="Source\Flow\Events\KeyEvent.h" />
     <ClInclude Include="Source\Flow\Events\MouseEvent.h" />
     <ClInclude Include="Source\Flowpch.h" />
+    <ClInclude Include="Source\Flow\GameFramework\Components\CameraComponent.h" />
     <ClInclude Include="Source\Flow\GameFramework\Components\Component.h" />
     <ClInclude Include="Source\Flow\GameFramework\Components\RenderableComponent.h" />
     <ClInclude Include="Source\Flow\GameFramework\Components\StaticMeshComponent.h" />
     <ClInclude Include="Source\Flow\GameFramework\Components\WorldComponent.h" />
+    <ClInclude Include="Source\Flow\GameFramework\ControlledObject.h" />
+    <ClInclude Include="Source\Flow\GameFramework\Controllers\Controller.h" />
+    <ClInclude Include="Source\Flow\GameFramework\Controllers\PlayerController.h" />
     <ClInclude Include="Source\Flow\GameFramework\Gameobject.h" />
     <ClInclude Include="Source\Flow\GameFramework\Other\Skybox.h" />
     <ClInclude Include="Source\Flow\GameFramework\World.h" />
@@ -298,10 +302,14 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Source\Flow\GameFramework\Components\CameraComponent.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Components\Component.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Components\RenderableComponent.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Components\StaticMeshComponent.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Components\WorldComponent.cpp" />
+    <ClCompile Include="Source\Flow\GameFramework\ControlledObject.cpp" />
+    <ClCompile Include="Source\Flow\GameFramework\Controllers\Controller.cpp" />
+    <ClCompile Include="Source\Flow\GameFramework\Controllers\PlayerController.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Gameobject.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\Other\Skybox.cpp" />
     <ClCompile Include="Source\Flow\GameFramework\World.cpp" />
