--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -57,7 +57,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)Flow\ThirdParty\DXTex\Include;$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow;$(SolutionDir)Flow\Source;$(SolutionDir)Flow\ThirdParty\Bullet;$(SolutionDir)Flow\ThirdParty\spdlog\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Flow\ThirdParty\DXTex\Include;$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow;$(SolutionDir)Flow\Source;$(SolutionDir)Flow\ThirdParty\Bullet;$(SolutionDir)Sandbox\Source;$(SolutionDir)Flow\ThirdParty\spdlog\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>IMGUI_API=__declspec(dllimport);FLOW_PLATFORM_WINDOWS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4251;</DisableSpecificWarnings>
     </ClCompile>
@@ -74,7 +74,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)Flow\ThirdParty\DXTex\Include;$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow;$(SolutionDir)Flow\Source;$(SolutionDir)Flow\ThirdParty\Bullet;$(SolutionDir)Flow\ThirdParty\spdlog\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Flow\ThirdParty\DXTex\Include;$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow;$(SolutionDir)Flow\Source;$(SolutionDir)Flow\ThirdParty\Bullet;$(SolutionDir)Sandbox\Source;$(SolutionDir)Flow\ThirdParty\spdlog\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>IMGUI_API=__declspec(dllimport);FLOW_PLATFORM_WINDOWS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -93,18 +93,22 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Content\Crate.cpp" />
+    <ClCompile Include="Source\Content\Layers\AGDLayer.cpp" />
     <ClCompile Include="Source\Content\Wall.cpp" />
     <ClCompile Include="Source\Content\WorldObjects\MeshWorldObject.cpp" />
-    <ClCompile Include="Source\Example Layer.cpp" />
-    <ClCompile Include="Source\Content\ExampleWorldObject.cpp" />
+    <ClCompile Include="Source\Content\Layers\Example Layer.cpp" />
+    <ClCompile Include="Source\Content\WorldObjects\ExampleWorldObject.cpp" />
+    <ClCompile Include="Source\Content\WorldObjects\PlayerPlane.cpp" />
     <ClCompile Include="Source\SandboxApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Content\Crate.h" />
+    <ClInclude Include="Source\Content\Layers\AGDLayer.h" />
     <ClInclude Include="Source\Content\Wall.h" />
     <ClInclude Include="Source\Content\WorldObjects\MeshWorldObject.h" />
-    <ClInclude Include="Source\Example Layer.h" />
-    <ClInclude Include="Source\Content\ExampleWorldObject.h" />
+    <ClInclude Include="Source\Content\Layers\Example Layer.h" />
+    <ClInclude Include="Source\Content\WorldObjects\ExampleWorldObject.h" />
+    <ClInclude Include="Source\Content\WorldObjects\PlayerPlane.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
