--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -81,8 +81,8 @@ Size=310,714
 Collapsed=0
 
 [Window][Application Statistics]
-Pos=0,616
-Size=1000,124
+Pos=0,606
+Size=1000,134
 Collapsed=0
 DockId=0x00000002,0
 
@@ -102,13 +102,40 @@ DockId=0x0000000D,0
 Pos=1002,372
 Size=278,368
 Collapsed=0
-DockId=0x0000000D,2
+DockId=0x0000000D,0
 
 [Window][Heirarchy]
 Pos=1002,0
 Size=278,370
 Collapsed=0
 DockId=0x0000000C,0
+
+[Window][World Settings]
+Pos=1002,372
+Size=278,368
+Collapsed=0
+DockId=0x0000000D,1
+
+[Window][SpriteTesting]
+Pos=1002,372
+Size=278,368
+Collapsed=0
+DockId=0x0000000D,2
+
+[Window][SpriteDrawing]
+Pos=7,93
+Size=165,99
+Collapsed=0
+
+[Window][UI Config]
+Pos=7,13
+Size=193,69
+Collapsed=0
+
+[Window][OpenCV]
+Pos=508,101
+Size=448,363
+Collapsed=0
 
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
@@ -118,10 +145,10 @@ DockSpace       ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
     DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=539,701
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,740 Split=X
   DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1000,740 Split=Y
-    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1280,614 Split=Y
+    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1280,604 Split=Y
       DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,326 Selected=0x0B5ED8BF
-      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,32 CentralNode=1 Selected=0x3F488DE8
-    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1280,124 Selected=0x3F488DE8
+      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,32 CentralNode=1 Selected=0x45477B24
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1280,134 Selected=0x3F488DE8
   DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=278,740 Split=Y Selected=0xE884D536
     DockNode    ID=0x0000000C Parent=0x00000008 SizeRef=210,370 Selected=0xE884D536
     DockNode    ID=0x0000000D Parent=0x00000008 SizeRef=210,368 Selected=0xF02CD328
