--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Flow/opencv_world430.dll
 Sandbox/opencv_world430d.dll
 Sandbox/opencv_world430.dll
 Sandbox/opencv_videoio_ffmpeg430_64.dll
+Sandbox/Profile-GameLoop.json
+Sandbox/Profile-Startup.json
